# dotfiles-new

./: .gitignore  .nanorc  .signature  .spacemacs  .zshrc  README.md  README.org  config.fish  cool-retro-terminal-profile.json  xsetwacom-my-preferences
.config/: compton-multi.conf  compton-solo.conf  compton.conf
.config/.ncmpcpp/: config
.config/i3/: config
.config/mpd/: database  log  mpd.conf  state
.config/mpd/playlists/: YouTube songs.m3u
.config/mpv/: input.conf  mpv.conf
.config/polybar/: bluetooth.sh  config  launch.sh  mpv.sh  pkg.sh
.config/ranger/: rc.conf
.emacs.d/: init.el
Wallpapers/: bgAE.png.REMOVED.git-id  stunning-hd-background.jpg.xmp
dev/C/: CMakeLists.txt.part1  CMakeLists.txt.part2  CMakeLists.txt.part3
dev/C++/: CMakeLists.txt.part3
dev/conan-project/: .clang-format  CMakeLists.txt  README.org
dev/templateC/: CMakeLists.txt
dev/templateC++/: .clang-format
fishfunctions/: cnew.fish  conannew.fish  cppnew.fish  weather.fish
spacemacs-layers/conlanging/: funcs.el
xresources/: .Xresources
